--- a/src/app/dashboard/pages/tables/tables.component.html
+++ b/src/app/dashboard/pages/tables/tables.component.html
@@ -30,6 +30,15 @@
     <td mat-cell *matCellDef="let user"> {{user.birth_date | date: 'dd/MM/YYYY'}} </td>
   </ng-container>
 
+  <!-- see details Column -->
+  <ng-container matColumnDef="see_details">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let user" style="text-align: right;">
+        <a class="pointer" (click)="goToDetails(user.id)" style="color: #e15639" matTooltip="See User">
+            <mat-icon>visibility</mat-icon>
+        </a>
+    </td>
+  </ng-container>
 
         <!-- Acciones -->
   <ng-container matColumnDef="acciones">
