--- a/src/app/dashboard/pages/cursos/cursos.component.html
+++ b/src/app/dashboard/pages/cursos/cursos.component.html
@@ -1,1 +1,66 @@
-<p>cursos works!</p>
+
+
+<div class="mb-3">
+    <button (click)="crearCurso()" color="primary" mat-flat-button>
+      <mat-icon>add</mat-icon>
+      Agregar Curso
+    </button>
+  </div>
+<mat-form-field class="form-field-class">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilters($event)" placeholder="Ex. ium" #input>
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <!-- Id Column -->
+<ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+    <td mat-cell *matCellDef="let curso"> {{curso.id}} </td>
+  </ng-container>
+
+  <!-- full name column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+    <td mat-cell *matCellDef="let curso"> {{curso.name}} </td>
+  </ng-container>
+
+  <!-- start date Column -->
+  <ng-container matColumnDef="start_date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> start Date </th>
+    <td mat-cell *matCellDef="let curso"> {{curso.start_date | date: 'dd/MM/YYYY'}} </td>
+  </ng-container>
+
+    <!-- end date Column -->
+  <ng-container matColumnDef="end_date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> end Date </th>
+    <td mat-cell *matCellDef="let curso"> {{curso.end_date | date: 'dd/MM/YYYY'}} </td>
+  </ng-container>
+
+  <!-- see details Column -->
+  <ng-container matColumnDef="see_details">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let curso" style="text-align: right;">
+        <a class="pointer" (click)="goToDetails(curso.id)" style="color: #e15639" matTooltip="See Course">
+            <mat-icon>visibility</mat-icon>
+        </a>
+    </td>
+  </ng-container>
+
+        <!-- Acciones -->
+  <ng-container matColumnDef="acciones">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let curso; let i = index" style="text-align: right;">
+        <a class="pointer" style="color: #1878b0" matTooltip="Edit Course" (click)="modificarCurso(i)">
+            <mat-icon>edit</mat-icon>
+        </a>
+        <a class="pointer" (click)="eliminarCurso(i)" style="color: #e15639" matTooltip="Delete Course">
+            <mat-icon>delete</mat-icon>
+        </a>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+
