--- a/src/app/dashboard/pages/cursos/components/abm-cursos/abm-cursos.component.html
+++ b/src/app/dashboard/pages/cursos/components/abm-cursos/abm-cursos.component.html
@@ -1,9 +1,9 @@
-<!-- <h1 mat-dialog-title>ABM cursos</h1>
+<h1 mat-dialog-title>ABM cursos</h1>
 <div mat-dialog-content>
-  <form class="grid formgrid" [formGroup]="cursosForm"> -->
+  <form class="grid formgrid" [formGroup]="cursosForm">
     <!-- CONTROL DE Name -->
 
-    <!-- <div class="col-12 field">
+    <div class="col-12 field">
       <mat-form-field class="w-full">
         <mat-label>Name</mat-label>
         <input
@@ -13,11 +13,11 @@
         >
         <mat-error *ngFor="let error of nameControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
       </mat-form-field>
-    </div> -->
+    </div>
 
 
     <!-- CONTROL DE Name -->
-    <!-- <div class="col-12 field">
+    <div class="col-12 field">
       <mat-form-field class="w-full">
         <mat-label>Name</mat-label>
         <input
@@ -29,13 +29,13 @@
       </mat-form-field>
     </div>
   </form>
-</div> -->
+</div>
 
 
 
  <!-- CONTROL DE fecha -->
 
- <!-- <div class="col-12 field">
+ <div class="col-12 field">
   <mat-form-field class="w-full">
     <mat-label>start date</mat-label>
     <input
@@ -51,4 +51,4 @@
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancelar</button>
   <button (click)="guardar()" mat-button>Guardar</button>
-</div> -->
+</div>
