--- a/src/app/dashboard/pages/inscripciones/inscripciones.component.html
+++ b/src/app/dashboard/pages/inscripciones/inscripciones.component.html
@@ -3,6 +3,7 @@
 <ng-template #ifNotLoading>
     <!--<pre>{{ (state$ | async)?.inscripciones | json }}</pre>-->
 
+    <button (click)="crearInscripcion()" type="button" mat-button>Create an inscription</button>
     <ul>
         <li *ngFor="let inscripcion of (state$ | async)?.inscripciones">
             {{ inscripcion.student.name + ' - ' + inscripcion.subject.nombre }}
