--- a/src/app/dashboard/pages/inscripciones/componentes/inscripcion-dialog/inscripcion-dialog.component.html
+++ b/src/app/dashboard/pages/inscripciones/componentes/inscripcion-dialog/inscripcion-dialog.component.html
@@ -2,11 +2,21 @@
 
 <div mat-dialog-content>
     <form [formGroup]="inscripcionForm">
+    <mat-form-field>
+        <mat-label>Student</mat-label>
         <mat-select [formControl]="studentIdControl">
-            <label>Select</label>
-            <mat-option *ngFor="let alumno of alumnos">{{ alumno.name }} {{alumno.last_name}}</mat-option>
-            
+            <mat-option [value]="alumno.id" *ngFor="let alumno of alumnos">{{ alumno.name }} {{alumno.last_name}}
+            </mat-option>
         </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Course</mat-label>
+        <mat-select [formControl]="courseIdControl">
+            <mat-option [value]="curso.id" *ngFor="let curso of cursos">
+                {{ curso.id }} - {{ curso.subject.name}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
     </form>
 </div>
 
