added, fixes and styles

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -18,3 +18,7 @@
   .user-name {
     margin-left: 10px;
 }
+.mat-drawer-container {
+  //background-color: #d2e8c2 ;
+  background-color: #EDF7E6;;
+}
