--- a/src/app/dashboard/pages/cursos/cursos.component.html
+++ b/src/app/dashboard/pages/cursos/cursos.component.html
@@ -1,9 +1,9 @@
 
 
-<div class="mb-3">
-    <button (click)="crearCurso()" color="primary" mat-flat-button>
-      <mat-icon>add</mat-icon>
-      Agregar Curso
+<div class="btn-add-div">
+    <button class="add-btn" (click)="crearCurso()">
+      <mat-icon class="add-btn-ic">add</mat-icon>
+      <span class="add-btn-span">Add Course</span>
     </button>
   </div>
 <mat-form-field class="form-field-class">
