--- a/src/app/dashboard/pages/cursos/cursos.component.scss
+++ b/src/app/dashboard/pages/cursos/cursos.component.scss
@@ -8,3 +8,33 @@ table{
 .pointer{
     cursor: pointer;
 }
+
+.btn-add-div{
+    margin-top: 25px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+button.add-btn {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    width: auto;
+    padding: 0.625rem 1.5rem 0.5rem;
+    border-radius: 6.25rem;
+    cursor: pointer;
+    background: #0032C8;
+    border: none;
+}
+
+.mat-icon.notranslate.add-btn-ic.material-icons.mat-ligature-font.mat-icon-no-color {
+    color: white;
+}
+span.add-btn-span {
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: -0.01em;
+    font-family: "Poppins";
+    color: #fff;
+    text-shadow: none;
+}
