--- a/src/app/dashboard/pages/alumnos/alumnos.component.html
+++ b/src/app/dashboard/pages/alumnos/alumnos.component.html
@@ -1,9 +1,9 @@
 
 
-<div class="mb-3">
-    <button (click)="abrirABMAlumnos()" color="primary" mat-flat-button>
-      <mat-icon>add</mat-icon>
-      Agregar Alumno
+<div class="btn-add-div">
+    <button class="add-btn" (click)="abrirABMAlumnos()" >
+      <mat-icon class="add-btn-ic">add</mat-icon>
+      <span class="add-btn-span">Add Student</span>
     </button>
   </div>
 <mat-form-field class="form-field-class">
@@ -11,23 +11,23 @@
     <input matInput (keyup)="applyFilters($event)" placeholder="Ex. ium" #input>
 </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+<table mat-table [dataSource]="dataSource" class="table-list" matSort>
     <!-- Id Column -->
 <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-    <td mat-cell *matCellDef="let user"> {{user.id}} </td>
+    <th class="table-id" mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+    <td class="list-id" mat-cell *matCellDef="let user"> {{user.id}} </td>
   </ng-container>
 
   <!-- full name column -->
   <ng-container matColumnDef="full_name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
-    <td mat-cell *matCellDef="let user"> {{user | fullName: 'lowercase'}} </td>
+    <th class="table-id" mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
+    <td class="list-data" mat-cell *matCellDef="let user"> {{user | fullName: 'lowercase'}} </td>
   </ng-container>
 
   <!-- birth date Column -->
   <ng-container matColumnDef="birth_date">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Birth Date </th>
-    <td mat-cell *matCellDef="let user"> {{user.birth_date | date: 'dd/MM/YYYY'}} </td>
+    <th class="table-id" mat-header-cell *matHeaderCellDef mat-sort-header> Birth Date </th>
+    <td class="list-data" mat-cell *matCellDef="let user"> {{user.birth_date | date: 'dd/MM/YYYY'}} </td>
   </ng-container>
 
   <!-- see details Column -->
@@ -41,15 +41,17 @@
   </ng-container>
 
         <!-- Acciones -->
-  <ng-container matColumnDef="acciones">
+  <ng-container matColumnDef="acciones" *ngIf="role === 'admin'" >
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let user; let i = index" style="text-align: right;">
-        <a class="pointer" style="color: #1878b0" matTooltip="Edit User" (click)="modificarUsuario(i)">
+    <td mat-cell *matCellDef="let user; let i = index" style="text-align: right;" >
+      <div class="actions-container" >
+        <a class="pointer" (click)="modificarUsuario(i)" style="color:#0032C8;" matTooltip="Edit User">
             <mat-icon>edit</mat-icon>
         </a>
-        <a class="pointer" (click)="eliminarUsuario(i)" style="color: #e15639" matTooltip="Delete User">
+        <a  class="pointer" (click)="eliminarUsuario(i)" style="color: #e15639" matTooltip="Delete User">
             <mat-icon>delete</mat-icon>
         </a>
+      </div>
     </td>
   </ng-container>
 
