--- a/src/app/dashboard/pages/inscripciones/componentes/inscripcion-dialog/inscripcion-dialog.component.html
+++ b/src/app/dashboard/pages/inscripciones/componentes/inscripcion-dialog/inscripcion-dialog.component.html
@@ -11,8 +11,8 @@
     </mat-form-field>
     <mat-form-field>
         <mat-label>Course</mat-label>
-        <mat-select [formControl]="courseIdControl">
-            <mat-option [value]="curso.id" *ngFor="let curso of cursos">
+        <mat-select [formControl]="selectedCourseControl">
+            <mat-option [value]="curso" *ngFor="let curso of cursos">
                 {{ curso.id }} - {{ curso.subject.name}}
             </mat-option>
         </mat-select>
@@ -21,5 +21,5 @@
 </div>
 
 
-<button mat-button type="button">Cancel</button>
-<button mat-button type="button">Save</button>
+<button mat-dialog-close mat-button type="button">Cancel</button>
+<button (click)="onSave()" mat-button type="button">Save</button>
