--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,14 @@
   <div class="example-sidenav-content">
     <!-- toolbar -->
     <mat-toolbar color="Basic">
-      <button
+      <button class="menu" (click)="drawer.toggle()" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+        <svg width="40" height="40" viewBox="0 0 100 100">
+          <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+          <path class="line line2" d="M 20,50 H 80" />
+          <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+        </svg>
+      </button>
+      <!-- <button
         type="button"
         mat-button
         (click)="drawer.toggle()"
@@ -37,23 +44,10 @@
         aria-label="Example icon-button with menu icon"
       >
         <mat-icon>menu</mat-icon>
-      </button>
-      <span [appFontSize]="20">Admin system</span>
+      </button> -->
+      <span [appFontSize]="20"><p class="title-navbar">Admin system</p></span>
       <span class="example-spacer"></span>
-      <button
-        mat-icon-button
-        class="example-icon favorite-icon"
-        aria-label="Example icon-button with heart icon"
-      >
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button
-        mat-icon-button
-        class="example-icon"
-        aria-label="Example icon-button with share icon"
-      >
-        <mat-icon>share</mat-icon>
-      </button>
+      
       <div class="user-icon">
         <img width="30" height="30" src="../../assets/img/avatar.png">
         <p class="user-name">{{ (authUserObs$ | async)?.name }}</p>
