--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,8 +17,84 @@
   }
   .user-name {
     margin-left: 10px;
+    margin-right: 10px;
+    font-weight: 500;
+    color: #0032C8;
+    font-size: 25px;
+    font-family: 'Poppins';
 }
 .mat-drawer-container {
   //background-color: #d2e8c2 ;
-  background-color: #EDF7E6;;
+  background-color: #EDF7E6;
+}
+
+/* menu button */
+mat-toolbar.mat-toolbar.mat-Basic.mat-toolbar-single-row {
+  background-color: #fff;
+    border-radius: 30px;
+    margin-top: 30px;
+    margin-bottom: 55px;
+    height: 60px;
+    --color-text: #0032C8;
+    -webkit-font-smoothing: antialiased;
+    box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+}
+
+body {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 5px;
+}
+.line {
+  fill: none;
+  stroke: #0032C8;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+p.title-navbar {
+  margin-left: 17px;
+  margin-top: 11px;
+  color: #0032C8;
+  font-family: "poppins";
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 29px;
+    letter-spacing: 1px;
 }
