--- a/src/app/dashboard/pages/alumnos/alumnos.component.scss
+++ b/src/app/dashboard/pages/alumnos/alumnos.component.scss
@@ -11,7 +11,8 @@ table{
 .btn-add-div{
     margin-top: 25px;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    text-align: center;
 }
 button.add-btn {
     position: relative;
@@ -72,4 +73,21 @@ span.add-btn-span {
     border: 1px solid;
     border-color: #0032C8;
     border-radius: 7px;
+}
+
+
+.form-field-class[_ngcontent-jlc-c61] {
+    width: 90%;
+}
+.form-field-class[_ngcontent-fbx-c61]{
+    width: 95%;
+    margin-left: 15px;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: white;
+}
+.mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-floating-label {
+    transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1),color 150ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: monospace;
 }
