--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,22 +1,70 @@
-<h2>Log in</h2>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="field">
-    <mat-form-field class="w-full">
-      <mat-label>E-mail</mat-label>
-      <input [formControl]="emailControl" type="text" matInput />
-      <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
-    </mat-form-field>
+<!-- <div class="auth-container">
+  <h2 class="title-auth">Welcome to Admin System</h2>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="field">
+      <mat-form-field class="w-full">
+        <mat-label>E-mail</mat-label>
+        <input [formControl]="emailControl" type="text" matInput />
+        <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
+      </mat-form-field>
+    </div>
+    <div class="field">
+      <mat-form-field class="w-full">
+        <mat-label>Password</mat-label>
+        <input [formControl]="passwordControl" type="password" matInput />
+        <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
+      </mat-form-field>
+    </div>
+    <div class="flex justify-content-end">
+      <button type="submit" color="primary" mat-flat-button>
+        Log in
+      </button>
+    </div>
+  </form>
+</div> -->
+
+
+<div class="container-fluid ps-md-0">
+  <div class="row g-0">
+    <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
+    <div class="col-md-8 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-8 mx-auto">
+              <!-- Sign In Form -->
+              <div class="auth-container">
+                <h2 class="title-auth">Welcome to Admin System</h2>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                  <div class="field">
+                    <mat-form-field class="w-full">
+                      <mat-label>E-mail</mat-label>
+                      <input [formControl]="emailControl" type="text" matInput />
+                      <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
+                    </mat-form-field>
+                  </div>
+                  <div class="field">
+                    <mat-form-field class="w-full">
+                      <mat-label>Password</mat-label>
+                      <input [formControl]="passwordControl" type="password" matInput />
+                      <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
+                    </mat-form-field>
+                  </div>
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                    <label class="form-check-label" for="rememberPasswordCheck">
+                      Remember password
+                    </label>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Sign in</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <mat-form-field class="w-full">
-      <mat-label>Contraseña</mat-label>
-      <input [formControl]="passwordControl" type="password" matInput />
-      <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | controlErrorMessages }}</mat-error>
-    </mat-form-field>
-  </div>
-  <div class="flex justify-content-end">
-    <button type="submit" color="primary" mat-flat-button>
-      Ingresar
-    </button>
-  </div>
-</form>
+</div>
